# DiscordBot

./: .gitignore  JJ-DiscordBot.py  JJ_DiscordBot.py  LICENSE  README.md  hidden.py.example  lsat-bot.py  praw.ini.example  pyproject.toml  requirements.txt
discordBot/: JJ_DiscordBot.py  bot.py
